// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlsUnit/columnScrollReact/ApplyCssTransform/WidthsDependentStylesComponent should not render width styles if does not need scroll. 1`] = `
<style
  data-qa="ColumnScrollReact__width-styles"
>
  .js-controls-ColumnScrollReact_offsetForFixed_guid123 { left: 702px; } .js-controls-ColumnScrollReact_offsetForEndFixed_guid123 { right: 100px; }
</style>
`;

exports[`ControlsUnit/columnScrollReact/ApplyCssTransform/WidthsDependentStylesComponent should render width styles if need scroll. 1`] = `
<style
  data-qa="ColumnScrollReact__width-styles"
>
  .js-controls-ColumnScrollReact_offsetForFixed_guid123 { left: 702px; } .js-controls-ColumnScrollReact_offsetForEndFixed_guid123 { right: 100px; }.js-controls-ColumnScrollReact_stretchedToViewPortElement_guid123 { width: 1200px; }.js-controls-ColumnScrollReact_rootElement_guid123 .controls-Grid__header-cell_withColumnScrollArrows { padding-bottom: calc( var(--inline_height_ArrowButton) + 2 * var(--offset_2xs) ); }
</style>
`;
